Resolve Buttn Align ment

--- a/wp-content/themes/twentysixteen/style.css
+++ b/wp-content/themes/twentysixteen/style.css
@@ -4816,7 +4816,7 @@ body {
 .first_select {
 	margin-left: 15px;
 }
-.form_reg_1 .form_section .radio_btn .dhvc-form-radio label {
+.reg_1_form .form_section .radio_btn .dhvc-form-radio label {
 	padding: 3px 0 0 20px;
 }
 /* -------------------------Responsive----------------------------------------------*/
